--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>Tania ❤️</title>
+    <title>Alexandra ❤️</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <span>!</span>
     </div>
     <div class="description">
-        <span>Este detalle es para ti ❤️ señorita Meli :)))</span>
+        <span>Este detalle es para ti ❤️ Mi qlona Linda :3</span>
     </div>
     <div class="button">
         <button class="botones">
